--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,11 @@
 button:hover {
   background: red;
 }
+.center {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  button {
+    width: 100%;
+  }
+}
