--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,11 +1,48 @@
-button:hover {
-  background: red;
-}
-.center {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  button {
-    width: 100%;
+footer {
+  position: fixed;
+  bottom: 5px;
+  right: 10px;
+  .versions {
+    display: flex;
+    flex-direction: column;
   }
 }
+.content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  .space-between {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    gap: 15px;
+
+    :first-child {
+      background: #c7348b;
+    }
+  }
+  #doctors-logo {
+    width: 40%;
+  }
+  .center {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    button {
+      width: 80%;
+    }
+    img {
+      width: 50%;
+      padding: 1.2em 0;
+    }
+    p-card {
+      width: 1rem;
+    }
+  }
+}
+@media (max-width:801px)  {
+  #doctors-logo {
+    display: none
+  }
+}
+
