--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,15 @@
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
 body {
   height: 100vh;
   overflow: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
+  font-family: 'IBM Plex Sans', sans-serif;
   background: rgb(2,0,36);
-  background: linear-gradient(45deg, rgba(2,0,36,1) 0%, rgba(87,87,92,1) 45%, rgba(82,139,150,1) 100%, rgba(51,99,108,1) 100%);
+  background: linear-gradient(45deg, rgba(2,0,36,1) 10%, rgba(87,87,92,1) 45%, rgba(82,139,150,1) 100%, rgba(51,99,108,1) 100%);
 }
